--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha --exit"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,8 @@
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "normalize-path": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.5",
