--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --exit"
+    "test": "node_modules/.bin/mocha --exit",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
