--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,25 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "seed.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha --exit",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^14.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "nodemon": "^2.0.15",
+    "normalize-path": "^3.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.5",
+    "mocha": "^9.2.0",
+    "supertest": "^6.2.2"
   }
 }
